--- a/trunk/of/app/views/user/_password.rhtml
+++ b/trunk/of/app/views/user/_password.rhtml
@@ -1,5 +1,11 @@
 <fieldset>
-  <legend><%= _('Change User Password') %></legend>
+  <legend>
+    <%if f.object.new_record?%>
+      <%= _('User|Password')%>
+    <%else%>
+      <%= _('Change User Password') %>
+    <%end%>
+  </legend>
   <%= f.hidden_field 'form', :value => 'change_password' %>
 
   <table class="form-table">
@@ -9,7 +15,7 @@
     <% end %>  
     <%= f.label :password, _('User|Password')+':', :must => true, :help => _('User|Password|help') %>
     <%= f.password_field "password", :size => 30 %>
-    <%= f.label :password_confirmation, _('User|Password Confirmation')+':', :must => true, :help => _('User|Password_Confirm|help') %>
+    <%= f.label :password_confirmation, _('User|Password Confirmation')+':', :must => true %>
     <%= f.password_field "password_confirmation", :size => 30 %>
   </table>
     <%= submit_tag _('User|Change Password'), "class" => "button" if submit%>
