--- a/trunk/of/app/views/releases/_top_download_list.rhtml
+++ b/trunk/of/app/views/releases/_top_download_list.rhtml
@@ -14,7 +14,7 @@
 <% for release in releases %>
  <%if i % 2 == 0; class_name="odd"; else; class_name="even"; end; -%>
   <tr class="<%= class_name %>">
-    <td><img src="<%= url_for(:controller => :images,:action => "image", :id => Project.find(release.project_id).icon,:size => 16) %>"/></td>
+    <td><img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{Project.find(release.project_id).icon}_16") %>"/></td>
     <td><%= (i+=1).to_s %></td>
     <td><%= link_to h(release.project.summary + " " + release.version), download1_path(:project_id => release.project_id) + "##{release.version}" %></td>
     <td><%= release.created_at.strftime("%Y/%m/%d %H:%M") %></td>
