--- a/trunk/of/app/views/partials/_top_menu_data.rhtml
+++ b/trunk/of/app/views/partials/_top_menu_data.rhtml
@@ -34,7 +34,7 @@ var menudata=
             {id:'<%=_('LastUpdatedBy')%>', url:'/rt/lastupdatedby'}
           ]
         },
-        {id:'<%=_('Create Project')%>', url:'/projects/new'}
+        {id:'<img src="/images/icon/star.gif"/><%=_('Create Project')%>', url:'/projects/new'}
       ]
     },
     {id:'<%=_('menu_License Wizard')%>', url:'http://www.openfoundry.org/index.php?option=com_content&task=view&id=134&Itemid=269',
