--- a/trunk/of/app/views/releases/edit.rhtml
+++ b/trunk/of/app/views/releases/edit.rhtml
@@ -2,10 +2,21 @@
 <p class=ReleaseBasic>
   <% form_for :release, @release, :url => {:id => @release,
     :action => :update}, :html => {:method => :put} do |f|%>
-    <%= arranged('ReleaseNew', @release, {
-        :editable => f,
-        :fields_per_column => 1
-      }) %>
+    <table class=ReleaseNew >
+<tr><th><em class='require'>*</em><%= Release.columns_hash['version'].human_name  -%> : </th>
+<td><%= text_field(:release, :version, :size => 20) %></td>
+</tr>
+<tr><th><%= Release.columns_hash['due'].human_name  -%> : </th>
+<td><%= text_field(:release, :due, :size => 20) %><img alt="Calendar" class="calendar-trigger" id="release_due_trigger" src="/images/calendar.png?1208875664" /><script type="text/javascript">
+//<![CDATA[
+Calendar.setup({inputField : 'release_due', ifFormat : '%Y-%m-%d', button : 'release_due_trigger' });
+//]]>
+</script></td>
+</tr>
+<tr><th><em class='require'>*</em><%= Release.columns_hash['status'].human_name  -%> : </th>
+<td><%= select( "release", "status", @release_status) %></td>
+</tr>
+</table>
     <%= submit_tag "Update" %> 
     <br/>
     <%= link_to '[Add Files]', 
