--- a/trunk/of/app/views/jobs/list.rhtml
+++ b/trunk/of/app/views/jobs/list.rhtml
@@ -9,7 +9,7 @@
   <li>
     <%= link_to h(data_item.subject), job_path(:id => data_item.id, :project_id => data_item.project_id) %>
     <%=data_item.updated_at.strftime("(%Y/%m/%d)")%>
-    <p><%=h data_item.description.chars[0..270].gsub(/<[^>]*>/,' ') %>...&nbsp;(<%=link_to (_('Read More'), :controller => "jobs", :action => "show", :id => data_item.id ) %>)</p>
+    <p><%=h data_item.description.chars[0..270].gsub(/<[^>]*>/,' ') %>...&nbsp;(<%=link_to (_('Read More'), job_path(:id => data_item.id, :project_id => data_item.project_id) ) %>)</p>
     <% if fpermit?("job", params[:project_id]) -%>
     <p>
       <label><%=_('Status')%>:</label>
@@ -19,7 +19,7 @@
 	      <%=_('Disabled')%>
       <% end %>
       <%= link_to _('Edit'), :action => 'edit', :id => data_item %>
-      <%= link_to _('Delete'), { :action => 'destroy', :id => data_item }, :confirm => _('todo確定要刪除嗎?'), :method => :delete %>
+      <%= link_to _('Delete'), { :action => 'destroy', :id => data_item }, :confirm => _('Are you sure?'), :method => :delete %>
     </p>
     <% end %>
   </li>
