--- a/trunk/of/app/views/releases/edit.rhtml
+++ b/trunk/of/app/views/releases/edit.rhtml
@@ -6,7 +6,7 @@
 <td><%= text_field(:release, :version, :size => 20) %></td>
 </tr>
 <tr><th><%= Release.columns_hash['due'].human_name  -%> : </th>
-<td><%= text_field(:release, :due, :size => 20) %><img alt="Calendar" class="calendar-trigger" id="release_due_trigger" src="/images/calendar.png?1208875664" /><script type="text/javascript">
+<td><%= text_field(:release, :due, :size => 20) %><img alt="Calendar" class="calendar-trigger" id="release_due_trigger" src="/images/calendar.gif" /><script type="text/javascript">
 //<![CDATA[
 Calendar.setup({inputField : 'release_due', ifFormat : '%Y-%m-%d', button : 'release_due_trigger' });
 //]]>
@@ -16,7 +16,7 @@ Calendar.setup({inputField : 'release_due', ifFormat : '%Y-%m-%d', button : 'rel
 <td><%= select( "release", "status", @release_status) %></td>
 </tr>
 </table>
-    <%= submit_tag "Update" %> 
+    <%= submit_tag _("Update") %> 
     <br/>
     <%= link_to '[Add Files]', 
       :project_id => @project_id,
