--- a/of/app/views/news/_listn.rhtml
+++ b/of/app/views/news/_listn.rhtml
@@ -1,8 +1,8 @@
   <ul>
     <%for news in newsList %>
     <li>
-      <%= link_to news.subject, news1_path(:id => news.id, :project_id => news.catid) %>
+      <%= link_to h(news.subject), news1_path(:id => news.id, :project_id => news.catid) %>
     </li>
     <%end %>
   </ul>
-  <%=link_to _('More...'), {:controller => "news", :action => "project"}, :class => "more" %>
+<%=link_to _('More...'), project_news_path(), :class => "more" %>
