--- a/trunk/of/app/views/releases/_top_download_list.rhtml
+++ b/trunk/of/app/views/releases/_top_download_list.rhtml
@@ -1,13 +1,13 @@
 <div id="ReleaseList">
-<h1><%= _('Listing releases') %></h1>
+<h1><%= _('Release Listing') %></h1>
 
 <table class=list-table>
   <tr>
-    <th></th>
-    <th><%= _('Rank') %></th>
-    <th><%= _('Release UNIX Name') %></th>
-    <th><%= _('Release Date') %></th>
-    <th><%= _('Download') %></th>
+    <th align=left></th>
+    <th align=left><%= _('Rank') %></th>
+    <th align=left><%= _('Release Name') %></th>
+    <th align=left><%= _('Release Date') %></th>
+    <th align=left><%= _('Download') %></th>
   </tr>
   
 <% i=(@page-1)*100 %>
