--- a/trunk/of/app/views/releases/_top_download_list.rhtml
+++ b/trunk/of/app/views/releases/_top_download_list.rhtml
@@ -4,7 +4,7 @@
 <table class=list-table>
   <tr>
     <th align=left></th>
-    <th align=left><%= _('Rank') %></th>
+    <th align=left nowrap><%= _('Rank') %></th>
     <th align=left><%= _('Release Name') %></th>
     <th align=left><%= _('Release Date') %></th>
     <th align=left><%= _('Download') %></th>
