--- a/trunk/of/app/views/projects/show.rhtml
+++ b/trunk/of/app/views/projects/show.rhtml
@@ -68,6 +68,5 @@
 </fieldset>
 
 
-<%= (link_to _('Edit'), :action => 'edit', :id => @project )+'|' if fpermit?("project_info", @project.id) %> 
-<%= link_to _('Back'), :action => 'index' %>
+<%= (link_to _('Edit'), :action => 'edit', :id => @project ) if fpermit?("project_info", @project.id) %> 
 </div>
