--- a/of/app/views/projects/edit.rhtml
+++ b/of/app/views/projects/edit.rhtml
@@ -2,11 +2,9 @@
 
 <% form_tag url_for(:action => 'update', :id => @project), :method => 'put' do %>
   <%= render :partial => 'form', :locals => { :is_edit => true } %>
-  <%= submit_tag 'Save' %>
+  <%= submit_tag _('Save') %>
 <% end %>
 
 <!-- tags was here ... -->
 
-<%= link_to 'Show', :action => 'show', :id => @project %> |
-<%= link_to 'Back', :action => 'index' %>
 </div>
