--- a/of/app/views/layouts/application.rhtml
+++ b/of/app/views/layouts/application.rhtml
@@ -70,7 +70,9 @@
     <%if params["project_id"] != nil%>
       <div class="project_logo_border">
         <div id='project_logo'>
-        <img src="<%= url_for(:controller => :images, :action => "cached_image", :id => @project.icon) %>"/>
+          <a href="<%= url_for(:controller => 'projects', :action => 'show', :id => @project.id) %>">
+            <img src="<%= url_for(:controller => :images, :action => "cached_image", :id => @project.icon) %>"/>
+          </a>  
         </div>
         <span><br/>  
           <%if current_user.has_role?('Admin',Project.find_by_id(params["project_id"]))%>
