--- a/trunk/of/app/views/site_admin/site_admin/index.rhtml
+++ b/trunk/of/app/views/site_admin/site_admin/index.rhtml
@@ -1,14 +1,14 @@
-hi, admin!
-<br/>
-
+<h3>網站管理</h3>
 <%= link_to _("Project"), :controller => "project" %>
 <%= link_to _("News"), :controller => "news" %>
 <%= link_to _("User"), :controller => "user" %>
-<br/>
-BE CAREFUL! for data sync only...
-<br/>
+
+<h3>BE CAREFUL! for data sync only...</h3>
 <%= link_to _("Resend Stomp msg for ALL MODELS"), :action => :resend %>
-<br/>
-Rebuild ferret index...
-<br/>
+
+<h3>Rebuild ferret index...</h3>
+
 <%= link_to _("Rebuild Ferret Index"), :action => :aaf_rebuild %>
+
+<h3>監控與分析</h3>
+<a href="https://www.google.com/analytics/reporting/?scid=5220412">Google Analytic</a>
