--- a/trunk/of/app/views/layouts/module.rhtml
+++ b/trunk/of/app/views/layouts/module.rhtml
@@ -1,4 +1,5 @@
 <% inside_layout 'application' do -%>
+<div id="Flash"><%= show_flash %></div>
   <div id="module_rt">
     <div id="module_nav">
       <div id="module_nav_center">
